# mcstats

./: Cargo.toml  README.MD  sample.env
src/: load_dotenv.rs  main.rs
